[gd_scene load_steps=20 format=3 uid="uid://c8oqxmm2w2wvv"]

[ext_resource type="Script" path="res://world.gd" id="1_ctiuy"]
[ext_resource type="FontFile" uid="uid://cikbh0cijo3yi" path="res://Fonts/cyberformhalf.ttf" id="2_474y7"]
[ext_resource type="PackedScene" uid="uid://c1j7an8woikyd" path="res://environment.tscn" id="2_fr3vy"]
[ext_resource type="FontFile" uid="uid://c76krp3u68v8j" path="res://Fonts/Cyberfall Italic.otf" id="2_tu5nb"]
[ext_resource type="Texture2D" uid="uid://8ka2ui7sq36p" path="res://addons/kenney_particle_pack/circle_05.png" id="3_hbot1"]
[ext_resource type="PackedScene" uid="uid://5k1o5ctvtah6" path="res://Scenes/enemy.tscn" id="3_nule3"]
[ext_resource type="Texture2D" uid="uid://ntptst52fu81" path="res://icons/7ddc6769-3759-4691-97e3-3555e34b3367.webp" id="4_d4g1i"]
[ext_resource type="Texture2D" uid="uid://cl6kwp05e50tu" path="res://icons/Hitmarker.png" id="6_jyvv5"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_u5pdl"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_w2qqb"]
sky_material = SubResource("ProceduralSkyMaterial_u5pdl")

[sub_resource type="Environment" id="Environment_6knbf"]
background_mode = 2
sky = SubResource("Sky_w2qqb")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="FontVariation" id="FontVariation_6d5jd"]
base_font = ExtResource("2_474y7")

[sub_resource type="FontVariation" id="FontVariation_0ollw"]
base_font = ExtResource("2_tu5nb")

[sub_resource type="FontVariation" id="FontVariation_q6w0d"]
base_font = ExtResource("2_tu5nb")

[sub_resource type="FontVariation" id="FontVariation_nop3c"]
base_font = ExtResource("2_tu5nb")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujyws"]
bg_color = Color(1, 0.117647, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cmecq"]
bg_color = Color(0.00392157, 1, 0, 1)

[sub_resource type="GDScript" id="GDScript_ry3qe"]
script/source = "extends ProgressBar


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.

func update_health(value):
	self.value = value
	print(\"Health bar updated to:\", value)  # Debug message

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="NavigationMesh" id="NavigationMesh_rmptm"]
vertices = PackedVector3Array(-26.2079, -11.6468, -27, -24.9579, -11.6468, -27, -24.9579, -11.6468, -29.25, -26.9579, -11.6468, -26.25, -29.2079, -11.6468, -29.25, -29.2079, -11.6468, -6.5, -26.2079, -11.6468, -23, -26.9579, -11.6468, -23.75, -18.7079, -11.8968, -6.5, -18.4579, -11.8968, -6.75, -23.7079, -11.6468, -23, -20.2079, -11.6468, -12.1667, -22.9579, -11.6468, -24, -20.3329, -11.6468, -13.9375, -23.7079, -11.6468, -27, -9.45786, -13.6468, -5, -7.20786, -13.6468, -5, -6.95786, -13.6468, -6.25, -9.70786, -13.6468, -6.75, -7.20786, -11.6468, -29.25, -22.9579, -11.6468, -26.25, -6.70786, -13.6468, -9.75, -6.70786, -11.8968, -18.75, -6.77036, -11.6468, -20.0625, -10.6245, -13.6468, -8.75, -13.457, -13.1468, -13.501, -19.4625, -11.6468, -21.0234, -6.20786, -13.6468, -7, -4.95786, -13.6468, -7.25, -4.95786, -13.6468, -9.5, -5.70786, -11.6468, -19, -5.70786, -11.6468, -10.5, -4.45786, -11.6468, -10.5, -4.45786, -11.6468, -19, -2.95786, -11.6468, -29.25, -3.45786, -11.8968, -18.75, -3.39536, -11.6468, -20.0625, -3.45786, -12.3968, -17.25, 3.29214, -12.3968, -17.25, 3.29214, -11.8968, -18.75, 2.79214, -11.6468, -29.25, 3.22964, -11.6468, -20.0625, 5.54214, -11.6468, -19, 6.54214, -11.8968, -18.75, 7.04214, -11.8968, -19, 7.04214, -11.6468, -29.25, 4.29214, -11.6468, -19, 4.29214, -11.6468, -10.5, 5.54214, -11.6468, -10.5, 27.0421, -11.6468, -26.25, 27.0421, -11.6468, -25, 29.5421, -11.6468, -25, 26.2921, -11.6468, -27, 29.5421, -11.6468, -29.25, 22.7921, -11.6468, -25.5, 23.7921, -11.6468, -27, 20.0421, -11.6468, -19.25, 23.0421, -11.6468, -24, -25.9579, -7.8968, -25.75, -25.7079, -7.8968, -24, -23.9579, -7.8968, -24.25, -24.2079, -7.8968, -26, 24.0421, -7.6468, -25.75, 24.2921, -7.6468, -24, 26.0421, -7.6468, -24.25, 25.7921, -7.6468, -26, -25.7079, -11.6468, -25.5, -25.4579, -11.6468, -24.25, -24.2079, -11.6468, -24.5, -24.4579, -11.6468, -25.75, 24.2921, -11.6468, -25.5, 24.5421, -11.6468, -24.25, 25.7921, -11.6468, -24.5, 25.5421, -11.6468, -25.75, 27.0421, -11.6468, -23.75, 26.2921, -11.6468, -23, 29.5421, -11.6468, -7.25, 23.7921, -11.6468, -23, 18.7921, -11.8968, -7.25, 7.04214, -13.6468, -6.25, 7.04214, -13.6468, -5, 9.29214, -13.6468, -5.25, 9.54214, -13.6468, -6.75, 6.54214, -13.6468, -9.75, 6.29214, -13.6468, -7, 5.04214, -13.6468, -9.5, 5.04214, -13.6468, -7.25, 13.5475, -13.1468, -13.5174, 18.5421, -11.8968, -6.75, -3.45786, -13.3968, -11.5, 3.29214, -13.3968, -11.5, -5.45786, -13.3968, -12, -5.45786, -13.6468, -10.75, -4.70786, -13.6468, -10.75, -4.70786, -13.3968, -12, 4.54214, -13.3968, -12, 4.54214, -13.6468, -10.75, 5.29214, -13.6468, -10.75, 5.29214, -13.3968, -12, -3.70786, -13.6468, -7, -3.45786, -13.6468, -9.75, -2.95786, -13.6468, -6.25, -2.95786, -13.6468, -5, 2.79214, -13.6468, -5, 3.79214, -13.6468, -7, 3.29214, -13.6468, -9.75, 3.04214, -13.6468, -6.25, 18.7921, -11.6468, -5.75, 10.2921, -11.6468, -5.75, 10.2921, -11.6468, -4.5, 18.7921, -11.6468, -4.5, 29.5421, -11.6468, -3, 18.5421, -12.1468, -3.5, 21.2921, -11.6468, -3.375, -18.7079, -11.6468, -4.5, -10.4579, -11.6468, -4.5, -10.4579, -11.6468, -5.75, -18.7079, -11.6468, -5.75, -29.2079, -11.6468, -3.75, -18.7079, -11.8968, -3.75, -5.95786, -9.8968, -5.75, -5.70786, -9.8968, -4, -3.95786, -9.8968, -4.25, -4.20786, -9.8968, -6, 4.04214, -9.6468, -5.75, 4.29214, -9.6468, -4, 6.04214, -9.6468, -4.25, 5.79214, -9.6468, -6, -5.70786, -13.6468, -5.5, -5.45786, -13.6468, -4.25, -4.20786, -13.6468, -4.5, -4.45786, -13.6468, -5.75, 4.29214, -13.6468, -5.5, 4.54214, -13.6468, -4.25, 5.79214, -13.6468, -4.5, 5.54214, -13.6468, -5.75, -11.7079, -13.3968, -5.5, -11.7079, -13.3968, -4.75, -10.7079, -13.6468, -4.75, -10.7079, -13.6468, -5.5, 10.5421, -13.6468, -5.5, 10.5421, -13.6468, -4.75, 12.0421, -13.3968, -4.75, 12.0421, -13.3968, -5.5, 7.04214, -13.6468, 3.75, 7.04214, -13.6468, 5, 9.29214, -13.6468, 5, 9.54214, -13.6468, 3.25, 11.2921, -13.3968, -3.5, 9.54214, -13.6468, -3.5, 6.29214, -13.6468, -3, 5.04214, -13.6468, 2.75, 11.2921, -13.3968, 3.25, 7.04214, -13.6468, -3.75, 5.04214, -13.6468, -3, 6.29214, -13.6468, 3, -9.45786, -13.6468, 5, -7.20786, -13.6468, 5, -6.95786, -13.6468, 3.75, -9.70786, -13.6468, 3.25, -4.95786, -13.6468, 2.75, -4.95786, -13.6468, -3, -6.20786, -13.6468, -3, -6.95786, -13.6468, -3.75, -9.70786, -13.6468, -3.5, -11.4579, -13.3968, -3.5, -11.4579, -13.3968, 3.25, -6.20786, -13.6468, 3, -2.95786, -13.6468, 3.75, -2.95786, -13.6468, 5, 2.79214, -13.6468, 5, 3.04214, -13.6468, 3.75, 3.79214, -13.6468, -3, 3.79214, -13.6468, 3, -2.95786, -13.6468, -3.75, 3.04214, -13.6468, -3.75, -3.70786, -13.6468, -3, -3.70786, -13.6468, 3, -18.7079, -11.8968, 3.25, -17.2079, -12.1468, 3.25, -16.9579, -12.3968, -3.5, -29.2079, -11.6468, 2.75, -20.0204, -11.6468, 3.1875, 17.2921, -12.3968, 3.25, 17.0421, -12.3968, -3.5, 19.0421, -11.8968, 3.5, 29.5421, -11.6468, 3.5, -18.9579, -11.8968, 7, -18.7079, -11.8968, 6.5, -18.9579, -11.6468, 5.5, -29.2079, -11.6468, 7, -10.4579, -11.6468, 5.5, -10.4579, -11.6468, 4.25, -18.9579, -11.6468, 4.25, 19.0421, -11.6468, 4.25, 10.2921, -11.6468, 4.25, 10.2921, -11.6468, 5.5, 19.0421, -11.6468, 5.5, 29.5421, -11.6468, 6.25, 19.0421, -11.8968, 6.25, -5.95786, -9.8968, 4.25, -5.70786, -9.8968, 6, -3.95786, -9.8968, 5.75, -4.20786, -9.8968, 4, 4.04214, -9.8968, 4.25, 4.29214, -9.8968, 6, 6.04214, -9.8968, 5.75, 5.79214, -9.8968, 4, -5.70786, -13.6468, 4.5, -5.45786, -13.6468, 5.75, -4.20786, -13.6468, 5.5, -4.45786, -13.6468, 4.25, 4.29214, -13.6468, 4.5, 4.54214, -13.6468, 5.75, 5.79214, -13.6468, 5.5, 5.54214, -13.6468, 4.25, -11.7079, -13.3968, 4.5, -11.7079, -13.3968, 5.25, -10.7079, -13.6468, 5.25, -10.7079, -13.6468, 4.5, 10.5421, -13.6468, 4.5, 10.5421, -13.6468, 5.25, 12.0421, -13.3968, 5.25, 12.0421, -13.3968, 4.5, -5.20786, -13.6468, 9.25, -4.95786, -13.6468, 7, -6.20786, -13.6468, 7, -6.70786, -13.6468, 9.5, -6.95786, -13.6468, 6.25, -9.70786, -13.6468, 6.5, -19.2079, -11.6468, 20.25, -6.70786, -11.8968, 18.5, -13.4776, -13.1468, 11.9777, -10.4526, -13.6468, 10.5228, 5.04214, -13.6468, 9.25, 5.04214, -13.6468, 7, 3.79214, -13.6468, 7, 3.29214, -13.6468, 9.5, -2.95786, -13.6468, 6.25, -3.45786, -13.6468, 9.5, -3.45786, -13.3968, 11.25, 3.29214, -13.3968, 11.25, -3.70786, -13.6468, 7, 3.04214, -13.6468, 6.25, 7.04214, -13.6468, 6.25, 9.54214, -13.6468, 6.5, 6.54214, -13.6468, 9.5, 6.54214, -11.8968, 18.5, 19.2921, -11.8968, 19.5, 18.7921, -11.8968, 6.5, 12.0374, -13.3968, 12.0167, 6.29214, -13.6468, 7, 26.2921, -11.6468, 27, 25.0421, -11.6468, 27, 25.0421, -11.6468, 29.25, 27.0421, -11.6468, 26.25, 29.5421, -11.6468, 29.25, 27.2921, -11.6468, 24.5, 24.0421, -11.6468, 23, 26.2921, -11.6468, 23, -24.9579, -11.6468, 29.25, -24.9579, -11.6468, 27.25, -26.2079, -11.6468, 27, -26.9579, -11.6468, 26.25, -29.2079, -11.6468, 29.25, -26.9579, -11.6468, 23.75, -25.4579, -11.6468, 22.75, -23.9579, -11.6468, 23, -4.45786, -11.6468, 18.75, -4.45786, -11.6468, 10.25, -5.70786, -11.6468, 10.25, -5.70786, -11.6468, 18.75, -6.45786, -11.6468, 29.25, -3.70786, -11.6468, 29.25, -3.70786, -11.8968, 18.75, -6.45786, -11.8968, 18.75, 5.54214, -11.6468, 18.75, 5.54214, -11.6468, 10.25, 4.29214, -11.6468, 10.25, 4.29214, -11.6468, 18.75, 3.54214, -11.6468, 29.25, 6.29214, -11.6468, 29.25, 6.29214, -11.8968, 18.75, 3.54214, -11.8968, 18.75, -5.45786, -13.6468, 10.5, -5.45786, -13.3968, 11.75, -4.70786, -13.3968, 11.75, -4.70786, -13.6468, 10.5, 4.54214, -13.6468, 10.5, 4.54214, -13.3968, 11.75, 5.29214, -13.3968, 11.75, 5.29214, -13.6468, 10.5, -3.45786, -12.3968, 17, 3.29214, -12.3968, 17, -23.7079, -11.6468, 27, -22.9579, -11.6468, 26.25, -22.9579, -11.6468, 23.75, 23.7921, -11.6468, 27, 22.7921, -11.6468, 25.5, 23.0421, -11.6468, 23.75, -25.9579, -7.8968, 24.25, -25.7079, -7.8968, 26, -23.9579, -7.8968, 25.75, -24.2079, -7.8968, 24, 24.0421, -7.8968, 24.25, 24.2921, -7.8968, 26, 26.0421, -7.8968, 25.75, 25.7921, -7.8968, 24, -25.7079, -11.6468, 24.5, -25.4579, -11.6468, 25.75, -24.2079, -11.6468, 25.5, -24.4579, -11.6468, 24.25, 24.2921, -11.6468, 24.5, 24.5421, -11.6468, 25.75, 25.7921, -11.6468, 25.5, 25.5421, -11.6468, 24.25)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(0, 3, 2), PackedInt32Array(2, 3, 4), PackedInt32Array(7, 6, 5), PackedInt32Array(3, 7, 4), PackedInt32Array(4, 7, 5), PackedInt32Array(9, 8, 11), PackedInt32Array(11, 8, 5), PackedInt32Array(11, 5, 10), PackedInt32Array(10, 5, 6), PackedInt32Array(9, 11, 13), PackedInt32Array(13, 11, 10), PackedInt32Array(13, 10, 12), PackedInt32Array(14, 1, 2), PackedInt32Array(16, 15, 17), PackedInt32Array(17, 15, 18), PackedInt32Array(21, 25, 22), PackedInt32Array(22, 25, 23), PackedInt32Array(23, 26, 19), PackedInt32Array(19, 26, 20), PackedInt32Array(20, 26, 12), PackedInt32Array(12, 26, 13), PackedInt32Array(13, 25, 9), PackedInt32Array(9, 25, 24), PackedInt32Array(24, 25, 21), PackedInt32Array(25, 26, 23), PackedInt32Array(26, 25, 13), PackedInt32Array(28, 27, 29), PackedInt32Array(29, 27, 21), PackedInt32Array(21, 27, 18), PackedInt32Array(21, 18, 24), PackedInt32Array(24, 18, 9), PackedInt32Array(14, 2, 20), PackedInt32Array(20, 2, 19), PackedInt32Array(27, 17, 18), PackedInt32Array(33, 32, 30), PackedInt32Array(30, 32, 31), PackedInt32Array(30, 19, 33), PackedInt32Array(33, 19, 34), PackedInt32Array(35, 33, 36), PackedInt32Array(36, 33, 34), PackedInt32Array(22, 23, 30), PackedInt32Array(30, 23, 19), PackedInt32Array(35, 36, 37), PackedInt32Array(37, 36, 38), PackedInt32Array(38, 36, 39), PackedInt32Array(39, 36, 41), PackedInt32Array(41, 36, 34), PackedInt32Array(41, 34, 40), PackedInt32Array(43, 42, 44), PackedInt32Array(44, 42, 45), PackedInt32Array(42, 48, 46), PackedInt32Array(46, 48, 47), PackedInt32Array(46, 40, 42), PackedInt32Array(42, 40, 45), PackedInt32Array(39, 41, 46), PackedInt32Array(46, 41, 40), PackedInt32Array(51, 50, 49), PackedInt32Array(49, 52, 51), PackedInt32Array(51, 52, 53), PackedInt32Array(54, 45, 55), PackedInt32Array(52, 55, 53), PackedInt32Array(53, 55, 45), PackedInt32Array(57, 56, 54), PackedInt32Array(54, 56, 44), PackedInt32Array(54, 44, 45), PackedInt32Array(61, 60, 58), PackedInt32Array(58, 60, 59), PackedInt32Array(65, 64, 62), PackedInt32Array(62, 64, 63), PackedInt32Array(69, 68, 66), PackedInt32Array(66, 68, 67), PackedInt32Array(73, 72, 70), PackedInt32Array(70, 72, 71), PackedInt32Array(74, 50, 51), PackedInt32Array(74, 51, 75), PackedInt32Array(75, 51, 76), PackedInt32Array(56, 57, 77), PackedInt32Array(77, 75, 56), PackedInt32Array(56, 75, 78), PackedInt32Array(78, 75, 76), PackedInt32Array(81, 80, 79), PackedInt32Array(81, 79, 82), PackedInt32Array(82, 79, 84), PackedInt32Array(82, 84, 83), PackedInt32Array(86, 85, 84), PackedInt32Array(84, 85, 83), PackedInt32Array(78, 87, 56), PackedInt32Array(56, 87, 44), PackedInt32Array(44, 87, 43), PackedInt32Array(43, 87, 83), PackedInt32Array(83, 87, 82), PackedInt32Array(82, 87, 78), PackedInt32Array(78, 88, 82), PackedInt32Array(37, 38, 89), PackedInt32Array(89, 38, 90), PackedInt32Array(94, 93, 91), PackedInt32Array(91, 93, 92), PackedInt32Array(98, 97, 95), PackedInt32Array(95, 97, 96), PackedInt32Array(28, 29, 99), PackedInt32Array(99, 29, 100), PackedInt32Array(103, 102, 101), PackedInt32Array(86, 104, 85), PackedInt32Array(85, 104, 105), PackedInt32Array(100, 89, 101), PackedInt32Array(101, 89, 103), PackedInt32Array(103, 89, 105), PackedInt32Array(105, 89, 90), PackedInt32Array(105, 104, 106), PackedInt32Array(101, 99, 100), PackedInt32Array(105, 106, 103), PackedInt32Array(88, 78, 107), PackedInt32Array(107, 78, 76), PackedInt32Array(110, 109, 107), PackedInt32Array(107, 109, 108), PackedInt32Array(107, 76, 110), PackedInt32Array(110, 76, 111), PackedInt32Array(112, 110, 113), PackedInt32Array(113, 110, 111), PackedInt32Array(117, 116, 114), PackedInt32Array(114, 116, 115), PackedInt32Array(114, 118, 117), PackedInt32Array(117, 118, 5), PackedInt32Array(114, 119, 118), PackedInt32Array(5, 8, 117), PackedInt32Array(123, 122, 120), PackedInt32Array(120, 122, 121), PackedInt32Array(127, 126, 124), PackedInt32Array(124, 126, 125), PackedInt32Array(131, 130, 128), PackedInt32Array(128, 130, 129), PackedInt32Array(135, 134, 132), PackedInt32Array(132, 134, 133), PackedInt32Array(139, 138, 136), PackedInt32Array(136, 138, 137), PackedInt32Array(143, 142, 140), PackedInt32Array(140, 142, 141), PackedInt32Array(145, 144, 146), PackedInt32Array(146, 144, 147), PackedInt32Array(149, 148, 150), PackedInt32Array(150, 148, 151), PackedInt32Array(151, 148, 147), PackedInt32Array(147, 148, 152), PackedInt32Array(80, 81, 153), PackedInt32Array(153, 81, 149), PackedInt32Array(151, 154, 150), PackedInt32Array(147, 144, 155), PackedInt32Array(149, 150, 153), PackedInt32Array(147, 155, 151), PackedInt32Array(157, 156, 158), PackedInt32Array(158, 156, 159), PackedInt32Array(162, 161, 160), PackedInt32Array(16, 163, 15), PackedInt32Array(15, 163, 164), PackedInt32Array(164, 162, 165), PackedInt32Array(165, 162, 160), PackedInt32Array(165, 160, 159), PackedInt32Array(165, 159, 166), PackedInt32Array(167, 158, 159), PackedInt32Array(164, 163, 162), PackedInt32Array(159, 160, 167), PackedInt32Array(169, 168, 170), PackedInt32Array(170, 168, 171), PackedInt32Array(154, 151, 172), PackedInt32Array(172, 151, 173), PackedInt32Array(102, 103, 174), PackedInt32Array(174, 103, 175), PackedInt32Array(160, 161, 176), PackedInt32Array(174, 175, 172), PackedInt32Array(173, 171, 172), PackedInt32Array(172, 171, 168), PackedInt32Array(172, 168, 177), PackedInt32Array(172, 177, 174), PackedInt32Array(160, 176, 177), PackedInt32Array(177, 176, 174), PackedInt32Array(178, 182, 179), PackedInt32Array(179, 182, 180), PackedInt32Array(180, 182, 119), PackedInt32Array(119, 182, 181), PackedInt32Array(119, 181, 118), PackedInt32Array(165, 166, 180), PackedInt32Array(180, 166, 179), PackedInt32Array(148, 184, 152), PackedInt32Array(152, 184, 183), PackedInt32Array(112, 113, 184), PackedInt32Array(184, 113, 183), PackedInt32Array(183, 113, 185), PackedInt32Array(185, 113, 111), PackedInt32Array(185, 111, 186), PackedInt32Array(188, 187, 189), PackedInt32Array(189, 187, 190), PackedInt32Array(193, 192, 189), PackedInt32Array(189, 192, 191), PackedInt32Array(189, 190, 193), PackedInt32Array(193, 190, 181), PackedInt32Array(178, 193, 182), PackedInt32Array(182, 193, 181), PackedInt32Array(197, 196, 194), PackedInt32Array(194, 196, 195), PackedInt32Array(197, 194, 198), PackedInt32Array(198, 194, 186), PackedInt32Array(194, 185, 186), PackedInt32Array(198, 199, 197), PackedInt32Array(203, 202, 200), PackedInt32Array(200, 202, 201), PackedInt32Array(207, 206, 204), PackedInt32Array(204, 206, 205), PackedInt32Array(211, 210, 208), PackedInt32Array(208, 210, 209), PackedInt32Array(215, 214, 212), PackedInt32Array(212, 214, 213), PackedInt32Array(219, 218, 216), PackedInt32Array(216, 218, 217), PackedInt32Array(223, 222, 220), PackedInt32Array(220, 222, 221), PackedInt32Array(226, 225, 224), PackedInt32Array(224, 227, 226), PackedInt32Array(226, 227, 228), PackedInt32Array(228, 227, 229), PackedInt32Array(157, 228, 156), PackedInt32Array(156, 228, 229), PackedInt32Array(231, 233, 227), PackedInt32Array(227, 233, 229), PackedInt32Array(229, 232, 188), PackedInt32Array(188, 232, 187), PackedInt32Array(187, 232, 230), PackedInt32Array(230, 232, 231), PackedInt32Array(231, 232, 233), PackedInt32Array(233, 232, 229), PackedInt32Array(235, 234, 236), PackedInt32Array(236, 234, 237), PackedInt32Array(239, 238, 240), PackedInt32Array(240, 238, 170), PackedInt32Array(240, 170, 237), PackedInt32Array(240, 237, 241), PackedInt32Array(225, 242, 224), PackedInt32Array(224, 242, 239), PackedInt32Array(238, 169, 170), PackedInt32Array(243, 236, 237), PackedInt32Array(239, 242, 238), PackedInt32Array(170, 243, 237), PackedInt32Array(145, 146, 244), PackedInt32Array(244, 146, 245), PackedInt32Array(248, 250, 249), PackedInt32Array(249, 250, 245), PackedInt32Array(245, 250, 246), PackedInt32Array(246, 250, 247), PackedInt32Array(247, 250, 248), PackedInt32Array(235, 251, 234), PackedInt32Array(234, 251, 246), PackedInt32Array(244, 245, 251), PackedInt32Array(251, 245, 246), PackedInt32Array(254, 253, 252), PackedInt32Array(252, 255, 254), PackedInt32Array(254, 255, 256), PackedInt32Array(198, 256, 257), PackedInt32Array(256, 255, 257), PackedInt32Array(258, 248, 259), PackedInt32Array(259, 248, 249), PackedInt32Array(259, 249, 199), PackedInt32Array(259, 199, 198), PackedInt32Array(198, 257, 259), PackedInt32Array(262, 261, 260), PackedInt32Array(262, 260, 263), PackedInt32Array(263, 260, 264), PackedInt32Array(265, 190, 266), PackedInt32Array(263, 264, 265), PackedInt32Array(265, 264, 190), PackedInt32Array(267, 266, 230), PackedInt32Array(230, 266, 187), PackedInt32Array(187, 266, 190), PackedInt32Array(271, 270, 268), PackedInt32Array(268, 270, 269), PackedInt32Array(271, 268, 272), PackedInt32Array(272, 268, 273), PackedInt32Array(268, 274, 273), PackedInt32Array(272, 275, 271), PackedInt32Array(279, 278, 276), PackedInt32Array(276, 278, 277), PackedInt32Array(279, 276, 280), PackedInt32Array(280, 276, 281), PackedInt32Array(276, 282, 281), PackedInt32Array(280, 283, 279), PackedInt32Array(287, 286, 284), PackedInt32Array(284, 286, 285), PackedInt32Array(291, 290, 288), PackedInt32Array(288, 290, 289), PackedInt32Array(240, 241, 292), PackedInt32Array(292, 241, 293), PackedInt32Array(293, 283, 292), PackedInt32Array(292, 283, 274), PackedInt32Array(274, 283, 280), PackedInt32Array(274, 280, 273), PackedInt32Array(294, 260, 261), PackedInt32Array(294, 295, 260), PackedInt32Array(260, 295, 272), PackedInt32Array(296, 267, 230), PackedInt32Array(296, 230, 295), PackedInt32Array(295, 230, 231), PackedInt32Array(295, 231, 275), PackedInt32Array(295, 275, 272), PackedInt32Array(297, 253, 254), PackedInt32Array(297, 254, 298), PackedInt32Array(298, 254, 281), PackedInt32Array(248, 258, 299), PackedInt32Array(299, 298, 248), PackedInt32Array(248, 298, 247), PackedInt32Array(247, 298, 282), PackedInt32Array(282, 298, 281), PackedInt32Array(303, 302, 300), PackedInt32Array(300, 302, 301), PackedInt32Array(307, 306, 304), PackedInt32Array(304, 306, 305), PackedInt32Array(311, 310, 308), PackedInt32Array(308, 310, 309), PackedInt32Array(315, 314, 312), PackedInt32Array(312, 314, 313)]

[node name="World" type="Node"]
script = ExtResource("1_ctiuy")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6knbf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 423.0
offset_top = 227.0
offset_right = -423.0
offset_bottom = -227.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_6d5jd")
theme_override_font_sizes/font_size = 30
text = "Terminal Breach"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SinglePlayer" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_0ollw")
text = "Single Player"

[node name="Options" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_q6w0d")
text = "Options"

[node name="Quit" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_nop3c")
text = "Quit"

[node name="7Ddc6769-3759-4691-97e3-3555e34b3367" type="Sprite2D" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
show_behind_parent = true
position = Vector2(131, 206)
scale = Vector2(1.13839, 1.03418)
texture = ExtResource("4_d4g1i")

[node name="spaceship" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_0ollw")
text = "Spaceship
"

[node name="HUD" type="Control" parent="CanvasLayer" groups=["hud"]]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Reticle" type="TextureRect" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
pivot_offset = Vector2(576, 324)
texture = ExtResource("3_hbot1")
stretch_mode = 5

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 330.0
offset_top = 70.0
offset_right = -330.0
offset_bottom = -536.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ujyws")
theme_override_styles/fill = SubResource("StyleBoxFlat_cmecq")
step = 1.0
value = 100.0
script = SubResource("GDScript_ry3qe")

[node name="Hitmarker" type="TextureRect" parent="CanvasLayer/HUD"]
visible = false
layout_mode = 0
offset_left = 568.0
offset_top = 315.0
offset_right = 584.0
offset_bottom = 332.0
texture = ExtResource("6_jyvv5")
expand_mode = 1

[node name="EvilRobot" parent="." instance=ExtResource("3_nule3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.00742, 1.03476, 0.74423)

[node name="Enemy93" parent="." instance=ExtResource("3_nule3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.67, 3.17711, 0.74423)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0685169, 0.118976, 0.152675)
navigation_mesh = SubResource("NavigationMesh_rmptm")

[node name="Environment" parent="NavigationRegion3D" instance=ExtResource("2_fr3vy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -14.1468, 0)

[node name="SpawnPoint" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("../DirectionalLight3D")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/SinglePlayer" to="." method="_on_single_player_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/spaceship" to="." method="_on_spaceship_pressed"]
